--- a/templates/index.html
+++ b/templates/index.html
@@ -42,21 +42,13 @@
 						{{end}}
 						</ul>
 					</dd>
-					<dt class="col-sm-3 text-right">Training Environment Variables</dt>
-					<dd class="col-sm-9">
-						<ul>
-						{{range .Envars}}
-							<li>{{.}}</li>
-						{{end}}
-						</ul>
-					</dd>
         </dl>
 			</div>
 			
 			<div class="footer">
 				<div class="row align-items-end">
 					<div class="col">
-						<a href="https://github.com/rscale-training/training-app"><i class="fab fa-github"></i></a> | Created by <a href="https://rscale.io">Resilient Scale</a>
+						<a href="https://github.com/cloudfoundry-tutorials/sample-app"><i class="fab fa-github"></i></a>
 					</div>
 				</div>
 			</div>
