--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160449920-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-160449920-1');
+		</script>
     <title>Cloud Foundry App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  	<!-- Bootstrap -->
-		<link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen" />
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   	<link href="/static/css/style.css" rel="stylesheet" />
   </head>
   <body>
@@ -29,11 +36,9 @@
           <dt class="col-sm-3 text-right">App Name</dt>
           <dd class="col-sm-9">{{.AppName}}</dd>
           <dt class="col-sm-3 text-right">App Instance Index</dt>
-					<dd class="col-sm-9">{{.AppInstanceIndex}}</dd>
+					<dd class="col-sm-9" id="app-instance-index">{{.AppInstanceIndex}}</dd>
 					<dt class="col-sm-3 text-right">App Instance GUID</dt>
           <dd class="col-sm-9">{{.AppInstanceGUID}}</dd>
-          <dt class="col-sm-3 text-right">Space Name</dt>
-					<dd class="col-sm-9">{{.SpaceName}}</dd>
 					<dt class="col-sm-3 text-right">Services</dt>
 					<dd class="col-sm-9">
 						<ul>
@@ -48,12 +53,14 @@
 			<div class="footer">
 				<div class="row align-items-end">
 					<div class="col">
-						<a href="https://github.com/cloudfoundry-tutorials/sample-app"><i class="fab fa-github"></i></a>
+						source: <a href="https://github.com/cloudfoundry-tutorials/sample-app">https://github.com/cloudfoundry-tutorials/sample-app</a>
 					</div>
 				</div>
 			</div>
 
-      <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
     </div>
   </body>
