simplify source link

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 			<div class="footer">
 				<div class="row align-items-end">
 					<div class="col">
-						source: <a href="https://github.com/cloudfoundry-tutorials/sample-app">https://github.com/cloudfoundry-tutorials/sample-app</a>
+						[<a href="https://github.com/cloudfoundry-tutorials/sample-app">source</a>]
 					</div>
 				</div>
 			</div>
